fix: fix scrollbar design compatibility on chrome :fire:

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -10,6 +10,11 @@
   margin: 0;
 }
 
+:root{
+  scrollbar-color: #212c49 #f1f1f1 !important;
+  scrollbar-width: thin !important;
+}
+
 html,
 body {
   height: 100%;
@@ -63,6 +68,7 @@ a {
 ::-webkit-scrollbar {
   width: 10px;
 }
+
 
 /* Track */
 ::-webkit-scrollbar-track {
